--- a/backend/package.json
+++ b/backend/package.json
@@ -10,22 +10,27 @@
     "start": "node dist/index.js",
     "test": "vitest"
   },
-  "keywords": ["iching", "divination", "api"],
+  "keywords": [
+    "iching",
+    "divination",
+    "api"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.6.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "axios": "^1.6.2",
+    "express": "^4.18.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.6",
     "@types/uuid": "^9.0.7",
-    "typescript": "^5.3.3",
     "tsx": "^4.7.0",
+    "typescript": "^5.3.3",
     "vitest": "^1.1.0"
   }
 }
