Update .env.example with deployment notes

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,10 @@
-# Supabase配置
+# Supabase配置（可选，如果不使用登录功能可以不配置）
 VITE_SUPABASE_URL=your_supabase_project_url
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
 
-# 注意：请复制此文件为 .env.local 并填入实际的Supabase配置信息
+# 后端 API 地址（仅本地开发时需要，Vercel 部署时不要设置）
+# VITE_BACKEND_URL=http://localhost:3002
+
+# 注意：
+# 1. 请复制此文件为 .env.local 并填入实际配置
+# 2. Vercel 部署时不要设置 VITE_BACKEND_URL，会自动使用 serverless functions
