--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.18.0",
     "zustand": "^4.4.6"
   },
